# flask-marshmallow-openapi

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml  tests.yaml
docs/: Makefile  conf.py  documenting_custom_field_types.md  documenting_delete_routes.md  documenting_get_routes.md  documenting_patch_routes.md  documenting_post_routes.md  excluding_endpoint_docs.md  getting_started.md  index.md  license.md  make.bat  markdown_and_docstrings.md  openapi_middleware.md  openapi_tags.md  security_schemes.md  serving_static_swagger_docs.md  url_parameters.md
docs/example_app/: app.py  my_api.py
docs/examples/foobar_api/: README.md  foobar_api.py  requirements.txt
docs/examples/foobar_api/resources/: CHANGELOG.md  __init__.py  open_api.template.yaml
src/flask_marshmallow_openapi/: __init__.py  decorators.py  flask_paths.py  helpers.py  middleware.py  models.py  schemas_registry.py  securities.py  static_collector.py
src/flask_marshmallow_openapi/decorators/: __init__.py  decorate_delete.py  decorate_get.py  decorate_patch.py  decorate_post.py  helpers.py
src/flask_marshmallow_openapi/templates/: changelog.html.jinja2  re_doc.jinja2  swagger_ui.jinja2
tests/: conftest.py  smoking_gun_spec.py
