[build-system]
requires = ["setuptools >= 77", "wheel"]


[project]
name = "flask-marshmallow-openapi"
version = "0.6.9"
description = "Flask + marshmallow + OpenAPI"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["OpenAPI SwaggerUI ReDoc"]
license = "MIT"
authors = [{ name = "Tomislav Adamic", email = "tomislav.adamic@gmail.com" }]
dependencies = [
    "apispec[yaml,marshmallow]",
    "flask >= 3.1",
    "inflection",
    "marshmallow >= 4.1",
    "pyyaml",
    "requests",
    "wrapt",
    "openapi-pydantic-models >= 1.0.1",
]


[project.urls]
Source = "https://github.com/tadams42/flask-marshmallow-openapi"
Documentation = "https://flask-marshmallow-openapi.readthedocs.io/en/latest/"


# Private, local dependencies
[dependency-groups]
dev = [
    "black",
    "bump2version",
    "ipython",
    "rich",
    "pre-commit",
    "check-manifest",
    # "flask-shell-ipython >= 0.5.1",
    "ruff",
    "pytest",
    "pytest-spec",
    "faker",
    "factory-boy",
]


# Published, extra dependencies
# Ie. package can be installed with `pip install package_name[extra_dependency_name]`
[project.optional-dependencies]
docs = ["furo", "myst-parser", "sphinx", "sphinx-copybutton"]


[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = true


[tool.setuptools.package-data]
flask_marshmallow_openapi = ["py.typed"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.isort]
profile = "black"
skip_gitignore = true


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-rxEfsw",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/data/",
    "--show-capture=no",
    # Folllowing plugins are normally not used, so we disable them to speed up pytest
    # startup time. They can be enabled temporarily when needed.
    "-pno:anyio",
    "-pno:mock",
    "-pno:profiling",
    "-pno:random_order",
    # "--random-order",
    # "--random-order-bucket=class",
]

python_classes = ["Describe*", "When*", "describe_*", "when_*"]
python_functions = ["it_*", "test_*", "then_*", "when_*"]
python_files = ["test_*", "*_spec.py", "*_test.py"]
spec_header_format = "{test_case}"
filterwarnings = ["ignore::DeprecationWarning"]


[tool.coverage.paths]
source = ["src"]


[tool.coverage.run]
branch = true
source = ["src", "tests"]


[tool.coverage.report]
show_missing = true
precision = 2


[tool.ruff]
exclude = [".git", ".venv", "build", "dist"]
line-length = 88                             # Same as Black.
target-version = "py310"
cache-dir = "~/.cache/ruff"
src = ["src"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort (I)
    "C90", # mccabe (C90)
    "UP",  # pyupgrade (UP)
    "S",   # flake8-bandit (S)
    "FBT", # flake8-boolean-trap (FBT)
    "B",   # flake8-bugbear (B)
    "C4",  # flake8-comprehensions (C4)
    "DTZ", # flake8-datetimez (DTZ)
    "FA",  # flake8-future-annotations (FA)
    "G",   # flake8-logging-format (G)
    "PIE", # flake8-pie (PIE)
    "PT",  # flake8-pytest-style (PT)
    "RET", # flake8-return (RET)
    "SIM", # flake8-simplify (SIM)
    "TCH", # flake8-type-checking (TCH)
    "PTH", # flake8-use-pathlib (PTH)
    "PL",  # Pylint (PL)
    "TRY", # tryceratops (TRY)
    "RUF", # Ruff-specific rules (RUF)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused-import (F401)
]
